Add TMDB API key for real movie posters

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         // Movies - TMDB API (requires key)
         // To enable: Add const TMDB_API_KEY = 'YOUR_KEY';
         // Get key from: https://www.themoviedb.org/settings/api
-        const TMDB_API_KEY = ''; // Add your key here
+        const TMDB_API_KEY = '3783979c6021378e3461274a428e7c64';
         
         async function loadMovies() {
             if (!TMDB_API_KEY) {
