Fix movie IDs for Her, Matrix, Everything Everywhere, Past Lives

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                 return;
             }
 
-            const movieIds = ['225914', '264660', '335984', '603', '5456112', '843114'];
+            const movieIds = ['152601', '264660', '335984', '603', '545611', '666277'];
             try {
                 const promises = movieIds.map(id => 
                     fetch(`https://api.themoviedb.org/3/movie/${id}?api_key=${TMDB_API_KEY}`)
