--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
     <h1>Morning Briefing</h1>
     <div class="date" id="date"></div>
     <div class="nav">
-        <button class="active" data-section="news" onclick="show('news')">News</button>
-        <button data-section="movies" onclick="show('movies')">Movies</button>
-        <button data-section="books" onclick="show('books')">Books</button>
-        <button data-section="tools" onclick="show('tools')">Tools</button>
+        <button class="active" data-section="news" onclick="show('news', this)">News</button>
+        <button data-section="movies" onclick="show('movies', this)">Movies</button>
+        <button data-section="books" onclick="show('books', this)">Books</button>
+        <button data-section="tools" onclick="show('tools', this)">Tools</button>
     </div>
 
     <div id="news" class="section active">
@@ -117,23 +117,31 @@
     <script>
         document.getElementById('date').textContent = new Date().toLocaleDateString('en-US', { weekday: 'long', month: 'long', day: 'numeric' });
         
-        function show(id) {
+        function show(id, btn) {
+            // Remove active from all sections and buttons
             document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
             document.querySelectorAll('.nav button').forEach(b => b.classList.remove('active'));
+            // Add active to selected
             document.getElementById(id).classList.add('active');
-            event.target.classList.add('active');
+            btn.classList.add('active');
             localStorage.setItem('activeTab', id);
         }
 
         // Restore last active tab
         const lastTab = localStorage.getItem('activeTab') || 'news';
-        if (lastTab !== 'news') {
-            document.querySelectorAll('.nav button').forEach(b => {
-                if (b.dataset.section === lastTab) {
-                    b.classList.add('active');
-                    document.getElementById(lastTab).classList.add('active');
-                }
-            });
+        // Remove default active classes first
+        document.querySelectorAll('.nav button').forEach(b => b.classList.remove('active'));
+        document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
+        // Restore saved tab
+        const activeBtn = document.querySelector(`.nav button[data-section="${lastTab}"]`);
+        const activeSection = document.getElementById(lastTab);
+        if (activeBtn && activeSection) {
+            activeBtn.classList.add('active');
+            activeSection.classList.add('active');
+        } else {
+            // Fallback to news if saved tab doesn't exist
+            document.querySelector('.nav button[data-section="news"]').classList.add('active');
+            document.getElementById('news').classList.add('active');
         }
 
         const news = [
