--- a/index.html
+++ b/index.html
@@ -243,11 +243,11 @@
 
         // Fallback curated books (when API is rate limited)
         const fallbackBooks = [
-            { title: 'The Singularity Is Nearer', authors: 'Ray Kurzweil', rating: 4.5, image: 'https://books.google.com/books/content?id=_L9XEAAAQBAJ&printsec=frontcover&img=1&zoom=1' },
-            { title: 'Superintelligence', authors: 'Nick Bostrom', rating: 4.3, image: 'https://books.google.com/books/content?id=itM4DQAAQBAJ&printsec=frontcover&img=1&zoom=1' },
-            { title: 'Life 3.0', authors: 'Max Tegmark', rating: 4.4, image: 'https://books.google.com/books/content?id=R5JitAEACAAJ&printsec=frontcover&img=1&zoom=1' },
-            { title: 'The Almanack of Navalman', authors: 'Eric Jorgenson', rating: 4.6, image: 'https://books.google.com/books/content?id=5xSFDwAAQBAJ&printsec=frontcover&img=1&zoom=1' },
-            { title: 'Atomic Habits', authors: 'James Clear', rating: 4.7, image: 'https://books.google.com/books/content?id=ikg8DwAAQBAJ&printsec=frontcover&img=1&zoom=1' }
+            { title: 'The Singularity Is Nearer', authors: 'Ray Kurzweil', rating: 4.5, image: 'https://images.unsplash.com/photo-1532012197267-da84d127e765?w=100&h=150&fit=crop&q=80' },
+            { title: 'Superintelligence', authors: 'Nick Bostrom', rating: 4.3, image: 'https://images.unsplash.com/photo-1495446815901-a7297e633e8d?w=100&h=150&fit=crop&q=80' },
+            { title: 'Life 3.0', authors: 'Max Tegmark', rating: 4.4, image: 'https://images.unsplash.com/photo-1512820790803-83ca734da794?w=100&h=150&fit=crop&q=80' },
+            { title: 'The Almanack of Navalman', authors: 'Eric Jorgenson', rating: 4.6, image: 'https://images.unsplash.com/photo-1481627834876-b7833e8f5570?w=100&h=150&fit=crop&q=80' },
+            { title: 'Atomic Habits', authors: 'James Clear', rating: 4.7, image: 'https://images.unsplash.com/photo-1497633762265-9d179a990aa6?w=100&h=150&fit=crop&q=80' }
         ];
 
         async function loadBooks() {
