--- a/index.html
+++ b/index.html
@@ -241,13 +241,13 @@
             }
         }
 
-        // Fallback curated books (when API is rate limited)
+        // Fallback curated books (Open Library covers)
         const fallbackBooks = [
-            { title: 'The Singularity Is Nearer', authors: 'Ray Kurzweil', rating: 4.5, image: 'https://images.unsplash.com/photo-1532012197267-da84d127e765?w=100&h=150&fit=crop&q=80' },
-            { title: 'Superintelligence', authors: 'Nick Bostrom', rating: 4.3, image: 'https://images.unsplash.com/photo-1495446815901-a7297e633e8d?w=100&h=150&fit=crop&q=80' },
-            { title: 'Life 3.0', authors: 'Max Tegmark', rating: 4.4, image: 'https://images.unsplash.com/photo-1512820790803-83ca734da794?w=100&h=150&fit=crop&q=80' },
-            { title: 'The Almanack of Navalman', authors: 'Eric Jorgenson', rating: 4.6, image: 'https://images.unsplash.com/photo-1481627834876-b7833e8f5570?w=100&h=150&fit=crop&q=80' },
-            { title: 'Atomic Habits', authors: 'James Clear', rating: 4.7, image: 'https://images.unsplash.com/photo-1497633762265-9d179a990aa6?w=100&h=150&fit=crop&q=80' }
+            { title: 'The Singularity Is Nearer', authors: 'Ray Kurzweil', rating: 4.5, isbn: '9780008551091' },
+            { title: 'Superintelligence', authors: 'Nick Bostrom', rating: 4.3, isbn: '9780198739838' },
+            { title: 'Life 3.0', authors: 'Max Tegmark', rating: 4.4, isbn: '9781101946592' },
+            { title: 'The Almanack of Navalman', authors: 'Eric Jorgenson', rating: 4.6, isbn: '9781543664297' },
+            { title: 'Atomic Habits', authors: 'James Clear', rating: 4.7, isbn: '9780735211292' }
         ];
 
         async function loadBooks() {
@@ -267,16 +267,20 @@
         }
 
         function renderBooks(books) {
-            document.getElementById('booksContent').innerHTML = books.map(b => `
+            document.getElementById('booksContent').innerHTML = books.map(b => {
+                const coverUrl = b.isbn 
+                    ? `https://covers.openlibrary.org/b/isbn/${b.isbn}-M.jpg` 
+                    : 'data:image/svg+xml,' + encodeURIComponent('<svg xmlns="http://www.w3.org/2000/svg" width="50" height="75" viewBox="0 0 50 75"><rect fill="%23222" width="50" height="75"/><text fill="%23666" font-size="8" x="50%" y="50%" text-anchor="middle">📖</text></svg>');
+                return `
                 <div class="list-item">
-                    <img src="${b.image}" alt="${b.title}" class="list-img" onerror="this.style.display='none'">
+                    <img src="${coverUrl}" alt="${b.title}" class="list-img" onerror="this.style.background='%23222';this.src='data:image/svg+xml,'+encodeURIComponent('<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%2250%22 height=%2275%22 viewBox=%220 0 50 75%22><rect fill=%22%23222%22 width=%2250%22 height=%2275%22/><text fill=%22%23666%22 font-size=%228%22 x=%2250%%22 y=%2250%%22 text-anchor=%22middle%22>📖</text></svg>')">
                     <div class="list-info">
                         <div class="list-title">${b.title}</div>
                         <div class="list-meta">${b.authors}</div>
                         <div class="list-rating">★ ${b.rating}</div>
                     </div>
                 </div>
-            `).join('');
+            `}).join('');
         }
 
         // Curated AI Tools with why it matters
